tidy up website

--- a/demonstration.html
+++ b/demonstration.html
@@ -13,18 +13,6 @@
     <meta property="og:description" content="Audovia is an Open Source
       software application for making music with up to 15 instrumental
       voices and a percussion track.">
-    <!--    
-<script type="text/javascript">
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-19275363-7', {
-      'storage': 'none',
-      'clientId': '35009a79-1a05-49d7-b876-2b884d0f825b'});
-      ga('send', 'pageview');
-    </script>
--->
     <style type="text/css">
 
       body {background-color: #FFFFFF; color: #000000;}
@@ -101,203 +89,9 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -307,103 +101,6 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -429,52 +126,10 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -485,27 +140,6 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
@@ -513,54 +147,10 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
                       Us</b></big></font></button></a> </td>
@@ -571,78 +161,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
               cellspacing="0">
               <tbody>
                 <tr>
-                  <td valign="top"><audio id="myAudio1"
-                      onended="purple(song[1], myAudio[1])"
-                      src="music/JSBach-Prelude-BWV556-v2R.mp3"></audio><audio
-                      id="myAudio2" onended="purple(song[2],
-                      myAudio[2])" src="music/Recordare.mp3"></audio><audio
-                      id="myAudio3" onended="purple(song[3],
-                      myAudio[3])" src="music/Gloria-Vivaldi-v3R.mp3"></audio><audio
-                      id="myAudio4" onended="purple(song[4],
-                      myAudio[4])" src="music/zadok.mp3"></audio><audio
-                      id="myAudio5" onended="purple(song[5],
-                      myAudio[5])" src="music/sheba.mp3"></audio><audio
-                      id="myAudio6" onended="purple(song[6],
-                      myAudio[6])" src="music/SheepMaySafelyGraze.mp3"></audio><audio
-                      id="myAudio7" onended="purple(song[7],
-                      myAudio[7])" src="music/Messiah-1-Sinfony.mp3"></audio>
-                    <script type="text/javascript">
-
-var myAudio = new Array();
-
-myAudio[0] = null;
-myAudio[1] = document.getElementById("myAudio1");
-myAudio[2] = document.getElementById("myAudio2");
-myAudio[3] = document.getElementById("myAudio3");
-myAudio[4] = document.getElementById("myAudio4");
-myAudio[5] = document.getElementById("myAudio5");
-myAudio[6] = document.getElementById("myAudio6");
-myAudio[7] = document.getElementById("myAudio7");
-
-var song = new Array();
-
-song[0] = null;
-song[1] = document.getElementById("song1");
-song[2] = document.getElementById("song2");
-song[3] = document.getElementById("song3");
-song[4] = document.getElementById("song4");
-song[5] = document.getElementById("song5");
-song[6] = document.getElementById("song6");
-song[7] = document.getElementById("song7");
-
-function purple(songitem, myAudioitem)
-{
-songitem.style.color = '#551a8b';
-myAudioitem.load();
-}
-
-function aud_play_pause(songitem, myAudioitem)
-{
-for (i = 1; i < song.length; i++)
-{
-if (songitem != song[i])
-{
-if (!myAudio[i].paused)
-{
-song[i].style.color = 'red';
-myAudio[i].pause();
-}
-}
-}
-
-if (myAudioitem.paused)
-{
-songitem.style.color = 'green';
-myAudioitem.play();
-}
-else
-{
-songitem.style.color = 'red';
-myAudioitem.pause();
-}
-}
-
-</script> <span class="body"></span>
+                  <td valign="top"> <span class="body"></span>
                     <blockquote><span class="body">
                         <div style="text-align:center;">
                           <!-- <iframe
