--- a/index.html
+++ b/index.html
@@ -88,125 +88,9 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                         rel="publisher" target="_blank"
                         style="text-decoration:none;display:inline-block;color:#333;text-align:center;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
                           margin-top:8px;">Audovia</span><span
                           style="display:inline-block;vertical-align:top;margin-right:15px;
@@ -214,64 +98,6 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
                       <a href="https://github.com/SongBase/Audovia"
                         target="_blank"><img
@@ -294,315 +120,25 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Home</b></big></font></button></a>&nbsp;&nbsp;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
             <a href="demonstration.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Video</b></big></font></button></a>&nbsp;&nbsp;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Sharing</b></big></font></button></a>&nbsp;&nbsp;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
                       Us</b></big></font></button></a> </td>
         </tr>
@@ -616,9 +152,6 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                     <blockquote><span class="body"><strong></strong>Make
                         music on your laptop or PC with <span
                           style="font-weight: bold;">Audovia</span>.&nbsp;
-
-
-
 
                         Songs can have up to 15 instrumental voices and
                         a percussion track with instruments chosen from
@@ -652,138 +185,6 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                         and expand the nodes.&nbsp; Select each bar in
                         turn and enter the notes<strong><em></em></strong>.&nbsp;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                         Select "Song" and press Play to play back your
                         music.&nbsp; From the <em>File</em> menu, you
                         can export to MIDI, MusicXML or WAV for music
@@ -809,69 +210,15 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                               bold;">Documentation</span></a> for more
                           information.<br>
                         </span> <br style="clear:right;">
-                        <!-- <br> -->
-                        <div style="margin-left: 40px;">
-                          <!--<form style="text-align: center;"
-                            action="https://www.paypal.com/cgi-bin/webscr"
-                            method="post" target="_top"> --> <span
+                        <div style="margin-left: 40px;"> <span
                             class="fullsize"><em>Audovia 3.0.11 for
-                              Microsoft Windows</em> &nbsp;</span>
-                          <!--<a
-href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-0-10.msi"><img
-                              alt="Windows" src="image/Windows.png"
-                              style="border: 0px solid; border: 0px
-                              solid; width: 108px; height: 34px;
-                              margin-bottom: 12px;" align="middle"></a>-->
-                          <a
+                              Microsoft Windows</em> &nbsp;</span> <a
 href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-0-11.msi"
                             style="text-decoration:none;"><button
                               type="button"
                               style="background-color:#eeeeee;
                               padding:5px; cursor:pointer"><font
                                 color="#551A8B" face="Verdana"><big><b>Download</b></big></font></button></a>
-                          <!--
-                            <a
-href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_i386.deb"><img
-                                alt="Linux (32-bit)"
-                                src="image/Linux%2832-bit%29.png"
-                                style="border: 0px solid; border: 0px
-                                solid; width: 142px; height: 34px;
-                                margin-bottom: 12px;" align="middle"></a>
--->
-                          <!--<a href="https://apps.ubuntu.com/cat/applications/audovia/"
-                              target="_blank"><img alt="Linux (32-bit)"
-                                src="image/Linux%2832-bit%29.png"
-                                style="border: 0px solid; border: 0px
-                                solid; width: 142px; height: 34px;
-                                margin-bottom: 12px;" align="middle"></a> -->
-                          <!--
-                            <a
-href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_amd64.deb"><img
-                                alt="Linux (64-bit)"
-                                src="image/Linux%2864-bit%29.png"
-                                style="border: 0px solid; border: 0px
-                                solid; width: 142px; height: 34px;
-                                margin-bottom: 12px;" align="middle"></a>
--->
-                          <!--
-<a href="https://apps.ubuntu.com/cat/applications/audovia/"
-                              target="_blank"><img alt="Linux (64-bit)"
-                                src="image/Linux%2864-bit%29.png"
-                                style="border: 0px solid; border: 0px
-                                solid; width: 142px; height: 34px;
-                                margin-bottom: 12px;" align="middle"></a> -->
-                          <!--<input name="cmd" value="_s-xclick"
-                              type="hidden"> <input
-                              name="hosted_button_id"
-                              value="RSU3TXL8H9BZ4" type="hidden"> <input
-                              src="image/Donate.png" name="submit"
-                              alt="PayPal – The safer, easier way to
-                              pay online." style="border: 0px solid;
-                              border: 0px solid; width: 93px; height:
-                              34px; margin-bottom: 12px;" type="image"
-                              align="middle"> <img alt=""
-                              src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif"
-                              border="0" width="1" height="1"> </form>-->
                         </div>
                         <br>
                         <div class="left"><span class="body"> Before
@@ -880,10 +227,7 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_am
                             install the latest version of Java from <a
                               href="http://java.com/"
                               class="nounderline" target="_blank"><em><strong>Java.com</strong></em></a>.
-                            <!--<span style="font-weight: bold;"><a
-                                href="https://launchpad.net/%7Ewebupd8team/+archive/ubuntu/java"
-                                class="nounderline" target="_blank"><span
-                                  style="font-style: italic;"></span></a></span>--><br>
+                            <br>
                             <br>
                             Sample songs are available from the "Demo"
                             folder in <i>File/XML Import</i>.<br>
@@ -892,13 +236,7 @@ href="https://bintray.com/artifact/download/songbuilder/generic/audovia_3.0.8_am
                               style="font-weight: bold;">Audovia</span>
                             is available from the Ubuntu Software
                             Center.</span><span class="body"><br>
-                            <!--
-                            Top download destination this month:<img
-                              style=" width: 50px; height: 33px;"
-                              alt="China"
-                              src="image/80px-Flag_of_the_People%27s_Republic_of_China.svg.png"
-                              align="top" hspace="10">
---></span></div>
+                          </span></div>
                       </div>
                     </blockquote>
                     <span class="body"><em><br>
