--- a/examples.html
+++ b/examples.html
@@ -8,7 +8,7 @@
     <meta content="Audovia is an Open Source application for making
       music." name="description">
     <meta property="og:image"
-      content="http://audovia.com/image/AudoviaExamples.png">
+      content="http://songbuilder.sourceforge.net/image/AudoviaExamples.png">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Audovia">
     <meta property="og:description" content="Audovia is an Open Source
@@ -44,11 +44,11 @@
 </style>
   </head>
   <body>
-    <table width="980" align="center" border="0" cellpadding="0"
-      cellspacing="0">
+    <table align="center" border="0" cellpadding="0" cellspacing="0"
+      width="980">
       <tbody>
         <tr>
-          <td class="heading" valign="top" align="center">
+          <td class="heading" align="center" valign="top">
             <div>
               <table style=" width: 100%;" border="0" cellpadding="4"
                 cellspacing="0">
@@ -71,7 +71,7 @@
                     <td style=" vertical-align: top; width: 180px;"><img
                         alt="Song Builder Icon"
                         src="image/SongBuilderColourIcon96.png"
-                        width="74" align="left" height="74"></td>
+                        align="left" height="74" width="74"></td>
                     <td style=" vertical-align: top;">
                       <div class="centre"><span class="header">Audovia</span><br>
                       </div>
@@ -90,9 +90,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
 
 
 
@@ -102,6 +106,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -123,35 +129,45 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
             height: 80px;"><a href="index.html"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
-                cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Home</b></big></font></button></a>&nbsp;&nbsp;
+                cursor:pointer"><font face="Verdana" color="#551A8B"><big><b>Home</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 border-color: #551A8B; padding:5px; cursor:pointer"><font
-                  color="#551A8B" face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+                  face="Verdana" color="#551A8B"><big><b>Songs</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
             <a href="demonstration.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
-                padding:5px; cursor:pointer"><font color="#551A8B"
-                  face="Verdana"><big><b>Video</b></big></font></button></a>&nbsp;&nbsp;
+                padding:5px; cursor:pointer"><font face="Verdana"
+                  color="#551A8B"><big><b>Video</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
-                padding:5px; cursor:pointer"><font color="#551A8B"
-                  face="Verdana"><big><b>Sharing</b></big></font></button></a>&nbsp;&nbsp;
+                padding:5px; cursor:pointer"><font face="Verdana"
+                  color="#551A8B"><big><b>Sharing</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
-                cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+                cursor:pointer"><font face="Verdana" color="#551A8B"><big><b>Contact
+
+
 
 
 
@@ -159,8 +175,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
         </tr>
         <tr>
           <td class="background" valign="top">
-            <table width="100%" border="0" cellpadding="0"
-              cellspacing="0">
+            <table border="0" cellpadding="0" cellspacing="0"
+              width="100%">
               <tbody>
                 <tr>
                   <td valign="top">
@@ -183,8 +199,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                         </tr>
                         <tr>
                           <td style=" vertical-align: top;">
-                            <table width="100%" border="0"
-                              cellpadding="4" cellspacing="0">
+                            <table border="0" cellpadding="4"
+                              cellspacing="0" width="100%">
                               <tbody>
                                 <tr>
                                   <td style="vertical-align: top;"><br>
@@ -236,8 +252,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           <td style=" width: 30px;"><br>
                           </td>
                           <td style=" vertical-align: top;">
-                            <table width="100%" border="0"
-                              cellpadding="4" cellspacing="0">
+                            <table border="0" cellpadding="4"
+                              cellspacing="0" width="100%">
                               <tbody>
                                 <tr>
                                   <td style=" vertical-align: top;"><span
