--- a/examples.html
+++ b/examples.html
@@ -92,9 +92,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
 
 
 
@@ -106,6 +110,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -135,10 +141,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 border-color: #551A8B; padding:5px; cursor:pointer"><font
                   face="Verdana" color="#551A8B"><big><b>Songs</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -153,6 +163,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font face="Verdana"
@@ -162,16 +174,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
-                cursor:pointer"><font face="Verdana" color="#551A8B"><big><b>Contact
-
-
-
-
-
-                      Us</b></big></font></button></a> </td>
+                cursor:pointer"><font face="Verdana" color="#551A8B"><big><b>Help</b></big></font></button></a>
+          </td>
         </tr>
         <tr>
           <td class="background" valign="top">
