--- a/sharing.html
+++ b/sharing.html
@@ -79,6 +79,8 @@
 
 
 
+
+
                             Open Source application for making music<br>
                           </em></span></div>
                     </td>
@@ -92,9 +94,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
 
 
 
@@ -104,6 +110,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -129,10 +137,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font face="Verdana"
                   color="#551A8B"><big><b>Songs</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -143,6 +155,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 border-color: #551A8B; padding:5px; cursor:pointer"><font
@@ -150,14 +164,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
-                cursor:pointer"><font face="Verdana" color="#551A8B"><big><b>Contact
-
-
-
-                      Us</b></big></font></button></a> </td>
+                cursor:pointer"><font face="Verdana" color="#551A8B"><big><b>Help</b></big></font></button></a>
+          </td>
         </tr>
         <tr>
           <td class="background" valign="top">
@@ -182,6 +195,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           <br>
                           If you are setting up a shared database, use
                           the <span style="font-style: italic;">Database/Database
+
+
 
 
 
