--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       a percussion track.">
     <style type="text/css">
 
-      body {background-color: #FFFFFF; color: #000000; background-image: url("image/Kelpies1280.jpg"); background-position: 50% 20%;}
+      body {background-color: #FFFFFF; color: #000000; background-image: url("image/Kelpies1280.jpg"); background-position: 50% 20%; background-repeat: no-repeat;}
 
       a:link {color: #551A8B;}
       a:visited {color: #551A8B;}
@@ -115,9 +115,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
 
 
 
@@ -159,6 +163,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
+
 
 
 
