--- a/index.html
+++ b/index.html
@@ -63,10 +63,12 @@
                     </td>
                   </tr>
                   <tr>
-                    <td style=" vertical-align: top; width: 180px;"><img
-                        alt="Song Builder Icon"
-                        src="image/SongBuilderColourIcon96.png"
-                        align="left" height="74" width="74"></td>
+                    <td style=" vertical-align: top; width: 180px;"><a
+                        href="doc/AudoviaDocumentation-3-0-8.pdf"
+                        target="_blank"><img alt="Song Builder Icon"
+                          src="image/SongBuilderColourIcon96.png"
+                          style="border: 0px solid; width: 74px; height:
+                          74px;" align="left"></a></td>
                     <td style=" vertical-align: top;">
                       <div class="centre"><span style="font-family:
                           Trebuchet MS;"><span class="header">Make Music
@@ -80,6 +82,8 @@
 href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                         rel="publisher" target="_blank"
                         style="text-decoration:none;display:inline-block;color:#333;text-align:center;
+
+
 
 
 
@@ -157,12 +161,16 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                           margin-top:8px;"></span><span
                           style="display:inline-block;vertical-align:top;margin-right:15px;
                           margin-top:8px;"></span><img
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
+
 
 
 
