--- a/indextest.html
+++ b/indextest.html
@@ -127,9 +127,15 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
+
 
 
 
@@ -181,6 +187,9 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
+
+
 
 
 
@@ -317,36 +326,31 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                                       id="song1">Prelude BWV 556</span></td>
                                 </tr>
                                 <tr>
-                                  <td title="play/pause" style="
-                                    vertical-align: top;"><span
+                                  <td style=" vertical-align: top;"><span
                                       onclick="aud_play_pause(song[6],
                                       myAudio[6])" class="song"
                                       id="song6">Sheep May Safely Graze</span></td>
                                 </tr>
                                 <tr>
-                                  <td title="play/pause" style="
-                                    vertical-align: top;"><span
+                                  <td style=" vertical-align: top;"><span
                                       onclick="aud_play_pause(song[2],
                                       myAudio[2])" class="song"
                                       id="song2">Recordare</span></td>
                                 </tr>
                                 <tr>
-                                  <td title="play/pause" style="
-                                    vertical-align: top;"><span
+                                  <td style=" vertical-align: top;"><span
                                       onclick="aud_play_pause(song[3],
                                       myAudio[3])" class="song"
                                       id="song3">Gloria</span></td>
                                 </tr>
                                 <tr>
-                                  <td title="play/pause"
-                                    style="vertical-align: top;"><span
+                                  <td style="vertical-align: top;"><span
                                       onclick="aud_play_pause(song[4],
                                       myAudio[4])" class="song"
                                       id="song4">Zadok the Priest</span></td>
                                 </tr>
                                 <tr>
-                                  <td title="play/pause"
-                                    style="vertical-align: top;"><span
+                                  <td style="vertical-align: top;"><span
                                       onclick="aud_play_pause(song[5],
                                       myAudio[5])" class="song"
                                       id="song5">Arrival of the Queen of
